# 3-Voices

./: .gitignore  CMakeLists.txt  README.md  ThreeVoicesUnisonMod.jucer
.github/workflows/: build.yml
Presets/: Classic Chorus.xml  Lo-Fi Chorus.xml  Subtle Vibrato.xml  Warm Tube Unison.xml  Wide Unison.xml
Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/ui/: InvisibleLookAndFeel.cpp  InvisibleLookAndFeel.h  PresetBar.h  PresetMenuOverlay.cpp  PresetMenuOverlay.h  PresetMenuPopup.h  RotaryKnob.h  ScreenPanel.h  SmallToggleButton.h  UnisonLookAndFeel.cpp  UnisonLookAndFeel.h  VerticalSlider.h  VoiceButton.h
